feat(server): Campaign with scenario-dataset pair